k8s/base/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quinta
  labels:
    app.kubernetes.io/part-of: alta-disponibilidade
---
apiVersion: v1
kind: Namespace
metadata:
  name: briosa
  labels:
    app.kubernetes.io/part-of: alta-disponibilidade
