k8s/base/10-quinta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quinta-web
  namespace: quinta
  labels:
    app.kubernetes.io/name: quinta-web
    app.kubernetes.io/part-of: alta-disponibilidade
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quinta-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quinta-web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
      containers:
        - name: web
          image: quinta-calvario:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
