k8s/base/11-quinta-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quinta-web
  namespace: quinta
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: quinta-web
  ports:
    - name: http
      port: 80
      targetPort: http
