k8s/base/22-briosa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: briosa-agenda
  namespace: briosa
spec:
  ingressClassName: nginx
  rules:
    - host: briosa.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: briosa-agenda
                port:
                  number: 80
